# ipv6calc

./: .gitattributes  .gitignore  CHANGES  COPYING  CREDITS  ChangeLog  INSTALLING  LICENSE  Makefile  Makefile.in  README  README.BUILDING-DBIP  README.BUILDING-GeoIP  README.BUILDING-IP2LOCATION  README.DBIP  README.DBIP2  README.External  README.GeoIP  README.GeoIP2  README.IP2Location  README.MaxMindDB  TODO  USAGE  VERSION  acconfig.h  addr_to_base85.c  addr_to_base85.h  addr_to_bitstring.c  addr_to_bitstring.h  addr_to_compressed.c  addr_to_compressed.h  addr_to_fulluncompressed.c  addr_to_fulluncompressed.h  addr_to_ifinet6.c  addr_to_ifinet6.h  addr_to_ip6int.c  addr_to_ip6int.h  addr_to_uncompressed.c  addr_to_uncompressed.h  autogen-all-variants.sh  (+63 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
contrib/: ipv6calc.spec  ipv6calc.spec.in
contrib/scripts-by-others/: README  dig6
databases/IP2Location/C-IP2Location-2.1.0/libIP2Location/: IP2Location.c  IP2Location.h  Makefile.am  bigd.c  bigd.h  bigdigits.c  bigdigits.h  spBigdigits.c
databases/as-assignment/: Makefile  check-run-create.sh  create-asn-registry-list.pl  dbasn_assignment.h
databases/cc-assignment/: Makefile  check-run-create.sh  create-cc-to-registry-list.pl  db_cc_reg_assignment.h
databases/ieee-iab/: Makefile  README  create_ieee_iab_headerfile.pl  dbieee_iab.h
databases/ieee-oui/: Makefile  README  create_ieee_oui_headerfile.pl  dbieee_oui.h
databases/ieee-oui28/: Makefile  README  dbieee_oui28.h
databases/ieee-oui36/: Makefile  README  dbieee_oui36.h
databases/ipv4-assignment/: Makefile  README  check-run-create.sh  create-registry-list.pl  dbipv4addr_assignment.h  update-ipv4-assignment.sh
databases/ipv6-assignment/: Makefile  README  check-run-create.sh  create-registry-list.pl  dbipv6addr_assignment.h  ipv6-unicast-address-assignments  update-ipv6-assignment.sh
databases/lib/: Makefile  Makefile.in  libipv6calc_db_wrapper.c  libipv6calc_db_wrapper.h  libipv6calc_db_wrapper_BuiltIn.c  libipv6calc_db_wrapper_BuiltIn.h  libipv6calc_db_wrapper_DBIP.c  libipv6calc_db_wrapper_DBIP.h  libipv6calc_db_wrapper_DBIP2.c  libipv6calc_db_wrapper_DBIP2.h  libipv6calc_db_wrapper_External.c  libipv6calc_db_wrapper_External.h  libipv6calc_db_wrapper_GeoIP.c  libipv6calc_db_wrapper_GeoIP.h  libipv6calc_db_wrapper_GeoIP2.c  libipv6calc_db_wrapper_GeoIP2.h  libipv6calc_db_wrapper_IP2Location.c  libipv6calc_db_wrapper_IP2Location.h  libipv6calc_db_wrapper_IP2Location2.c  libipv6calc_db_wrapper_IP2Location2.h  libipv6calc_db_wrapper_MMDB.c  libipv6calc_db_wrapper_MMDB.h
databases/lisp/: site-db.txt
databases/registries/: Makefile  README  update-registries.sh
databases/tools/: create_ieee_headerfile.pl  ipv6calc-db-info.pl  ipv6calc-db-update.sh  test_db_lookup.sh
doc/: Makefile.in  README.dsl  db2xhtml-ipv6calc.xsl  generate.sh  ipv6calc.html  ipv6calc.lyx  ipv6calc.sgml  ipv6calc.xml  ldp.dsl  runsgmlfix.sh  sgmllyxquotefix.pl  sgmllyxtabletagfix.pl
examples/analog/: analog-dist-combined.cfg  analog-dist.cfg  analog-ipv6calc-descriptions.txt  ipv6calc.tab  run_analog.sh
examples/apache/: ipv6loganon.conf
getopt/: Makefile  Makefile.in  README
ipv6calc/: Makefile  Makefile.in  ipv6calc.c  ipv6calc.h  ipv6calchelp_local.c  ipv6calchelp_local.h  ipv6calcoptions_local.h  showinfo.c  showinfo.h  test_ipv6calc.sh  test_ipv6calc_anonymization.sh  test_ipv6calc_filter.sh  test_privacyiid_detection.sh  test_scenarios.sh  test_showhelp.sh  test_showinfo.sh
ipv6calcweb/: Makefile  Makefile.in  README  USAGE  create_ipv6calcweb-cgi.sh  create_version.pl  fix-cgi-in.sh  ipv6calcweb-databases-in-var.te  ipv6calcweb-dbfiles.te  ipv6calcweb.cgi  ipv6calcweb.cgi.in  ipv6calcweb.conf  test_ipv6calcweb.sh  test_ipv6calcweb_form.sh
ipv6loganon/: Makefile.in  README  ipv6loganon.c  ipv6loganon.h  ipv6loganonhelp.c  ipv6loganonhelp.h  ipv6loganonoptions.h  test_ipv6loganon.sh
ipv6logconv/: Makefile  Makefile.in  ipv6logconv.c  ipv6logconv.h  ipv6logconvhelp.c  ipv6logconvhelp.h  ipv6logconvoptions.h  test_ipv6logconv.sh
ipv6logstats/: Makefile  Makefile.in  README  collect_ipv6logstats.pl  example_gnuplot.cmd  example_ipv6logstats.sh  ipv6logstats.c  ipv6logstats.h  ipv6logstatshelp.c  ipv6logstatshelp.h  ipv6logstatsoptions.h  test_ipv6logstats.sh
ipv6logstats/examples-data/: data-200301.txt  data-200302.txt  data-200303.txt  data-200304.txt  data-200305.txt  data-200306.txt  data-simple.txt
ipv6logstats/examples-gri/: data-simple.gri
lib/: Makefile  Makefile.in  create_ieee_oui_headerfile.pl  ipv6calc_inttypes.h  ipv6calc_typedefs.h  ipv6calccommands.h  ipv6calchelp.c  ipv6calchelp.h  ipv6calcoptions.c  ipv6calcoptions.h  ipv6calcoptions_common.h  ipv6calctypes.c  ipv6calctypes.h  libeui64.c  libeui64.h  libieee.c  libieee.h  libieeeoui.h  libifinet6.c  libifinet6.h  libipaddr.c  libipaddr.h  libipv4addr.c  libipv4addr.h  libipv6addr.c  libipv6addr.h  libipv6calc.c  libipv6calc.h  libipv6calc_filter.h  libipv6calcdebug.h  libmac.c  libmac.h  librfc1884.c  librfc1884.h  librfc1886.c  librfc1886.h  librfc1924.c  librfc1924.h  librfc2874.c  librfc2874.h  (+8 more)
man/: Makefile.in  ipv6calc.8  ipv6loganon.8  ipv6logconv.8  ipv6logstats.1  ipv6logstats.8
md5/: Makefile  Makefile.in  README  md5.c  md5.h
mod_ipv6calc/: Makefile.in  README.md  README.mod_ipv6calc  ipv6calc.cgi  ipv6calc.conf  mod_ipv6calc.c  test_mod_ipv6calc.sh
samplecode/: addrconf.c  ip6_int  ipv6.h  rfc1924-encode.c
samplecode/getopt/: URL
samplecode/ieee/: Makefile  README  create_ieee_oui_headerfile.pl  oui.txt  oui.txt.timestamp  url.txt
tools/: DBIP-generate-db.pl  DBIP-update.sh  DBIP-update.sh.in  GeoIP-update.sh  GeoIP-update.sh.in  IP2Location-update.sh  IP2Location-update.sh.in  Makefile  Makefile.in  ipv6calc-create-registry-list-ipv4.pl  ipv6calc-create-registry-list-ipv6.pl  ipv6calc-create-update-ipset.sh  ipv6calc-db-update-support.sh  ipv6calc-db-update.sh  ipv6calc-db-update.sh.in  ipv6calc-registries-check-run-create.sh  ipv6calc-update-registries.sh  registry-assignment-to-list.c
(+35 files in other folders)
